# herring-spawner

./: .gitignore  AGENTS.md  README.md  batch1_final_list.txt  pyproject.toml
data/candidates_final/: high_conf.html  manifest.json  report.json  temporal_validation.json
data/candidates_knn/: summary.json  (+3 more)
docs/: agent_handoff.md  herring_research_results.md  salmon_coast_locations.md  sog_research.md  technical_recommendation.md  veki_research.md  web-mined-spawns.md
herring_spawner/: config.py  models.py
notebooks/: 01-initial-scene-search.ipynb
scripts/: build_combined_report.py  build_delta_review.py  build_event_catalog.py  build_interactive_review.py  build_labeler.py  clay_delta_detector.py  clay_reconstruction.py  color_classify.py  dinov2_consensus.py  download_and_review.py  explore_dinov2_features.py  fetch_gee_thumbnails.py  final_bc_sweep.py  improved_detector.py  ingress_dfo_gee_search.py  ingress_external_data.py  knn_detector.py  label_fiftyone.py  label_images.py  run_clay_embeddings.py  run_clay_multispectral.py  run_embeddings.py  run_gee_search.py  scan_bc_coast.py  scan_bc_coast_knn.py  scan_salmon_coast.py  search_known_events.py  train_classifier.py  upload_hf_dataset.py  validate_candidates.py  validate_temporal.py  validate_temporal_candidates.py
tests/: test_build_event_catalog.py  test_build_labeler.py  test_clay_reconstruction.py  test_dinov2_consensus.py  test_imports.py  test_knn_detector.py  test_models.py  test_scan_bc_coast_knn.py  test_scan_salmon_coast.py  test_search_known_events.py  test_webapp.py
webapp/: app.py  models.py
(+77 files in other folders)
