[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herring-spawner"
version = "0.1.0"
description = "Research prototype for detecting Pacific herring spawn from satellite imagery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "earthengine-api>=0.1.395",
  "fastkml>=0.12",
  "geopandas>=0.14",
  "gpxpy>=1.6",
  "jinja2>=3.1",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "scikit-learn>=1.4",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
